[package]
name = "testing-irfi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "testing-irfi"
path = "src/main.rs"

[dependencies]
mpc-recovery-node = { path = "../node" }
near-primitives = "0.17"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
hex-literal = "0.4.1"
digest = "0.8.1"
sha2 = "0.8.1"
ripemd160 = "0.8.0"
hex = "0.4.0"
rust-base58 = "0.0.4"